--- a/web/main/templates/main/appraisals.html
+++ b/web/main/templates/main/appraisals.html
@@ -177,7 +177,7 @@
         </td>
         <td>
           <span style="vertical-align: middle;">
-            {% if appraisal.visadorUser %}
+            {% if appraisal.tasadorUser %}
               {{ appraisal.tasadorUser.first_name.0 }}. {{ appraisal.tasadorUser.last_name }}
             {% else %}
             -
