--- a/web/appraisal/templates/appraisal/realestate_general.html
+++ b/web/appraisal/templates/appraisal/realestate_general.html
@@ -3,19 +3,21 @@
 <div class="col">
 
   <div class="row">
-    <div class="col-6">
-      <div class="form-group row">
-        <label class="col-sm-2 col-form-label-sm font-weight-bold">Tasador</label>
-        <div class="col-sm-6">
-          <input type="text" class="form-control form-control-sm" value="{{forms.appraisal.instance.tasadorUser.first_name}} {{forms.appraisal.instance.tasadorUser.last_name}}" disabled>
-        </div>
+    <div class="col-2">
+    </div>
+    <div class="col-4">
+      <div class="form-group">
+        <label>Tasador</label>
+        <input type="text" class="form-control" value="{{forms.appraisal.instance.tasadorUser.first_name}} {{forms.appraisal.instance.tasadorUser.last_name}}" disabled>
+      </div>
+    </div>
+    <div class="col-auto">
+      <div class="form-group">
         {% if perms.appraisal.assign_tasador %}
         {% if appraisal.active %}
-        <div class="col-auto">
-          <button type="button" class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#asignarTasador">
-            Asignar tasador
-          </button>
-        </div>
+        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#asignarTasador" style="margin-top:2em;">
+          Asignar tasador
+        </button>
         {% endif %}
         {% endif %}
       </div>
@@ -23,158 +25,169 @@
   </div>
 
   <div class="row">
-    <div class="col-6">
-      <div class="form-group row">
-        <label class="col-sm-2 col-form-label-sm font-weight-bold">Visador</label>
-        <div class="col-sm-6">
-          <input type="text" class="form-control form-control-sm" value="{{forms.appraisal.instance.visadorUser.first_name}} {{forms.appraisal.instance.visadorUser.last_name}}" disabled>
-        </div>
+    <div class="col-2">
+    </div>
+    <div class="col-4">
+      <div class="form-group">
+        <label>Visador</label>
+        <input type="text" class="form-control" value="{{forms.appraisal.instance.visadorUser.first_name}} {{forms.appraisal.instance.visadorUser.last_name}}" disabled>
+      </div>
+    </div>
+    <div class="col-auto">
+      <div class="form-group">
         {% if perms.appraisal.assign_visador %}
         {% if appraisal.active %}
-        <div class="col-sm-auto">
-          <button type="button" class="btn btn-sm btn-secondary" data-toggle="modal" data-target="#asignarVisador">
-            Asignar visador
-          </button>
-        </div>
+        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#asignarVisador" style="margin-top:2em;">
+          Asignar visador
+        </button>
         {% endif %}
         {% endif %}
       </div>
     </div>
   </div>
 
-  <label class="col-form-label-sm font-weight-bold">Tasación</label>
-  <div class="row">
-    <div class="col-4">
-      <div class="form-group row">
-        <label class="col-sm-3 col-form-label-sm text-right">Tipo</label>
-        <div class="col-sm-9">
-          {{forms.appraisal.tipoTasacion}}
-        </div>
+  <div class="row mt-4">
+    <div class="col-2">
+      <p class="font-weight-bold text-right">Tasación</p>
+    </div>
+    <div class="col-3">
+      <div class="form-group">
+        <label>Tipo</label>
+        {{forms.appraisal.tipoTasacion}}
       </div>
     </div>
-    <div class="col-4">
-      <div class="form-group row">
-        <label class="col-sm-3 col-form-label-sm text-right">Objetivo</label>
-        <div class="col-sm-9">
-          {{forms.appraisal.objetivo}}
-        </div>
+    <div class="col-3">
+      <div class="form-group">
+        <label>Objetivo</label>
+        {{forms.appraisal.objetivo}}
       </div>
     </div>
   </div>
 
-  <label class="col-form-label-sm font-weight-bold">Solicitante</label>
-  <div class="row">
-    <div class="col-4">
-      <div class="form-group row">
-        <label class="col-sm-3 col-form-label-sm text-right">Nombre</label>
-        <div class="col-sm-9">
-          {{forms.appraisal.solicitante}}
-        </div>
-      </div>
+  <div class="row mt-4">
+    <div class="col-2">
+      <p class="font-weight-bold text-right">Solicitante</p>
     </div>
     <div class="col-4">
-      <div class="form-group row">
-        <label class="col-sm-3 col-form-label-sm text-right">Código</label>
-        <div class="col-sm-9">
-          {{forms.appraisal.solicitanteCodigo}}
-        </div>
+      <div class="form-group">
+        <label>Nombre</label>
+        {{forms.appraisal.solicitante}}
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="form-group">
+        <label>Código</label>
+        {{forms.appraisal.solicitanteCodigo}}
       </div>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-4">
-      <div class="form-group row">
-        <label class="col-sm-3 col-form-label-sm text-right">Sucursal</label>
-        <div class="col-sm-9">
-          {{forms.appraisal.solicitanteSucursal}}
-        </div>
-      </div>
+    <div class="col-2">
     </div>
     <div class="col-4">
-      <div class="form-group row">
-        <label class="col-sm-3 col-form-label-sm text-right">Ejecutivo</label>
-        <div class="col-sm-9">
-          {{forms.appraisal.solicitanteEjecutivo}}
-        </div>
+      <div class="form-group">
+        <label>Ejecutivo</label>
+        {{forms.appraisal.solicitanteEjecutivo}}
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="form-group">
+        <label>Sucursal</label>
+        {{forms.appraisal.solicitanteSucursal}}
       </div>
     </div>
   </div>
 
-  <label class="col-form-label-sm font-weight-bold">Cliente</label>
-  <div class="row">
-    <div class="col-4">
-      <div class="form-group row">
-        <label class="col-sm-3 col-form-label-sm text-right">Nombre</label>
-        <div class="col-sm-9">
-          {{forms.appraisal.cliente}}
-        </div>
-      </div>
+  <div class="row mt-4">
+    <div class="col-2">
+      <p class="font-weight-bold text-right">Cliente</p>
     </div>
     <div class="col-4">
-      <div class="form-group row">
-        <label class="col-sm-3 col-form-label-sm text-right">Rut</label>
-        <div class="col-sm-9">
-          {{forms.appraisal.clienteRut}}
-        </div>
+      <div class="form-group">
+        <label>Nombre</label>
+        {{forms.appraisal.cliente}}
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="form-group">
+        <label>Rut</label>
+        {{forms.appraisal.clienteRut}}
       </div>
     </div>
   </div>
 
-  <label class="col-form-label-sm font-weight-bold">Propietario</label>
-  <div class="row">
-    <div class="col-4">
-      <div class="form-group row">
-        <label class="col-sm-3 col-form-label-sm text-right">Nombre</label>
-        <div class="col-sm-9">
-          {{forms.appraisal.propietario}}
-        </div>
-      </div>
+  <div class="row mt-4">
+    <div class="col-2">
+      <p class="font-weight-bold text-right">Propietario</p>
     </div>
     <div class="col-4">
-      <div class="form-group row">
-        <label class="col-sm-3 col-form-label-sm text-right">Rut</label>
-        <div class="col-sm-9">
-          {{forms.appraisal.propietarioRut}}
-        </div>
+      <div class="form-group">
+        <label>Nombre</label>
+        {{forms.appraisal.propietario}}
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="form-group">
+        <label>Rut</label>
+        {{forms.appraisal.propietarioRut}}
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row text-right">
+    <div class="col-2">
+    </div>
     <div class="col-4">
-      <div class="form-group row">
-        <div class="col-sm-3 text-right">
-          {{forms.appraisal.propietarioReferenceSII}}
-        </div>        
-        <label class="col-sm-9 col-form-label-sm">Referencia SII</label>
+      <div class="form-group">
+        {{forms.appraisal.propietarioReferenceSII}}
+        <label>Referencia SII</label>
       </div>
     </div>
   </div>
-  <div class="card bg-light mb-0 mr-2">
-    <div class="card-header">Roles</div>
-    <div class="card-body">
-      <div class="card-text">
-        <div class="form-row">
-          <div class="col-auto">
-            <label for="solicitante" class="col-form-label-sm">
-              Rol avaluo
-            </label>
-          </div>
-          <div class="col-lg-3">
-            {{forms.appraisal.rol}}
-          </div>
-          <div class="col-lg-3">
-            {{forms.appraisal.rolType}}
-          </div>
-        </div>
+
+  <div class="row mt-4">
+    <div class="col-2" id="id_title">
+      <p class="font-weight-bold text-right">Roles</p>
+    </div>
+    <div class="col-3">
+      <div class="form-group" id="id_codigo">
+        <label>Código</label>
+        {{forms.rol.code}}
       </div>
     </div>
+    <div class="col-2">
+      <div class="form-group" id="id_estado">
+        <label>Estado</label>
+        {{forms.rol.state}}
+      </div>
     </div>
+    <div class="col-1" id="id_div_btn">
+      <button type="button" class="btn btn-secondary add_rol" id="id_btn" style="margin-top:2em;">
+        Añadir
+      </button>
+    </div>
+  </div>
 
 </div>
 </div>
 
 <script>
+
+  $('.add_rol').click(
+    function() {
+      var row = $(this).closest('.row');
+      var newRow = row.clone();
+      newRow.removeClass('mt-4')
+      newRow.find('#id_title').html('')
+      newRow.find('#id_codigo').find('label').hide()
+      newRow.find('#id_estado').find('label').hide()
+      newRow.find('#id_div_btn').html('')
+      row.find('#id_btn').appendTo(newRow.find('#id_div_btn'));
+      newRow.find('#id_btn').removeAttr('style')
+      row.after(newRow);
+    }
+  );
+
   function valid_rut(rut) {
     function dv(T) {
       var M=0,S=1;
