--- a/web/evaluation/templates/appraiser_evaluation.html
+++ b/web/evaluation/templates/appraiser_evaluation.html
@@ -1,35 +1,23 @@
 {% extends 'main/base.html' %}
+
 {% load static %}
 
 {% block content %}
 
-
-
-<div class="container">
-    <div class="col-8">
-        <div class="card">
-            <div class="card-body">
-                {% include 'appraiser_list.html' %}
-            </div>
+<div class="container mb-4" style="max-width:100%">
+    <div class="card">
+        <div class="card-body">
+            {% include 'appraiser_list.html' %}
         </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-                <div class="card-body">
-                    {% include "main/appraisals.html" %}
-                </div>
-        </div>
-
-    </div>
-</div>
+{% include "main/appraisals.html" %}
 
 <script>
- $('.appraiser').click(function() {
+$('.appraiser').click(function() {
     var id = $(this).val();
-    console.log(id);
+    console.log('id',id);
     $('.activas').attr('hidden');
     $('.activas').hide();
     $('.previas').attr('hidden');
