--- a/web/main/templates/main/appraisals.html
+++ b/web/main/templates/main/appraisals.html
@@ -30,16 +30,16 @@
   <table class="table table-sm table-borderless">
     <thead>
       <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Cliente</th>
-        <th scope="col" style="text-align:center;">T.</th>
-        <th scope="col">Dirección</th>
-        <th scope="col">Tasador</th>
-        <th scope="col">Visador</th>
-        <th scope="col" style="text-align:center;">E.</th>
-        <th scope="col">Creada</th>
-        <th scope="col">Entrega</th>
-        <th scope="col"></th>
+        <th scope="col" style="width:1em">ID</th>
+        <th scope="col" style="width:10em">Cliente</th>
+        <th scope="col" style="width:1em;text-align:center;">T.</th>
+        <th scope="col" style="width:19em;">Dirección</th>
+        <th scope="col" style="width:10em;">Tasador</th>
+        <th scope="col" style="width:10em;">Visador</th>
+        <th scope="col" style="width:1em;text-align:center;">E.</th>
+        <th scope="col" style="width:8em;">Creada</th>
+        <th scope="col" style="width:8em;">Entrega</th>
+        <th scope="col" style="width:5em;"></th>
       </tr>
     </thead>
     <tbody>
@@ -148,14 +148,15 @@
   <table class="table table-sm table-borderless">
     <thead>
       <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Cliente</th>
-        <th scope="col" style="text-align:center;">T.</th>
-        <th scope="col">Dirección</th>
-        <th scope="col">Tasador</th>
+        <th scope="col" style="width:1em">ID</th>
+        <th scope="col" style="width:10em">Cliente</th>
+        <th scope="col" style="width:1em;text-align:center;">T.</th>
+        <th scope="col" style="width:19em">Dirección</th>
+        <th scope="col" style="width:10em">Tasador</th>
         <!--<th scope="col">Fecha creación</th>-->
-        <th scope="col">Entregada</th>
-        <th scope="col"></th>
+        <th scope="col" style="width:10em">Entregada</th>
+        <th scope="col" style="width:17em"></th>
+        <th scope="col" style="width:5em"></th>
       </tr>
     </thead>
     <tbody>
@@ -171,8 +172,8 @@
           <i class="{{ appraisal.realEstate.get_propertyTypeIcon }}"></i>
         </td>
         <td>
-          <a class="text-dark" href={{appraisal.url}}>
-            {{ appraisal.realEstate.address }}
+          <a href={{appraisal.url}}>
+            {{ appraisal.realEstate.addressVerboseNoRegion }}
           </a>
         </td>
         <td>
@@ -192,15 +193,24 @@
         <td>
           <script>timeFinished("{{appraisal.timeFinished | date:"c"}}");</script>
         </td>
+        <td>
+        </td>
         <td style="text-align:right;">
-          <button id='btn-vis' onclick="location.href='{{appraisal.url}}?tab=logbook'" type="button" class="btn btn-dark btn-sm btn-delete">
+          <button id='btn-vis' onclick="location.href='{{appraisal.url}}'" type="button" class="btn btn-dark btn-sm btn-delete" style="font-family:Material Icons;font-size:1.0em;margin-bottom:1px;border:0px;">
             visibility
           </button>
           {% if perms.appraisal.assign_visador %}
-          <button data-toggle="modal" data-target="#evaluateAppraisal" type="button" id="{{appraisal.tasadorUser.id}}" value="{{appraisal.id}}"
-                  class="btn btn-dark btn-sm btn-evaluate evaluateAppraisal" data-ontime="{{appraisal.appraisalevaluation.onTime}}"
-                  data-completeness="{{appraisal.appraisalevaluation.completeness}}" data-commenttext="{{appraisal.appraisalevaluation.commentText}}"
-                  data-generalquality="{{appraisal.appraisalevaluation.generalQuality}}" data-commentfeedback="{{appraisal.appraisalevaluation.commentFeedback}}">
+          <button type="button" id="{{appraisal.tasadorUser.id}}" 
+                  value="{{appraisal.id}}"
+                  class="btn btn-dark btn-sm btn-evaluate evaluateAppraisal"
+                  data-toggle="modal"
+                  data-target="#evaluateAppraisal" 
+                  data-ontime="{{appraisal.appraisalevaluation.onTime}}"
+                  data-completeness="{{appraisal.appraisalevaluation.completeness}}"
+                  data-commenttext="{{appraisal.appraisalevaluation.commentText}}"
+                  data-generalquality="{{appraisal.appraisalevaluation.generalQuality}}"
+                  data-commentfeedback="{{appraisal.appraisalevaluation.commentFeedback}}"
+                  style="font-family:Material Icons;font-size:1.0em;margin-bottom:1px;border:0px;">
             assessment
           </button>
         </td>
