--- a/web/main/templates/main/appraisals.html
+++ b/web/main/templates/main/appraisals.html
@@ -21,7 +21,7 @@
 
 <div class="container" style="max-width:100%">
 
-<div class="card mb-4">
+<div class="card mb-4" id="div_activas">
 
   <div class="card-body">
 
@@ -143,7 +143,7 @@
   </div>
 </div>
 
-<div class="card mb-4">
+<div class="card mb-4" id="div_previas">
 
   <div class="card-body">
 
