--- a/web/appraisal/templates/appraisal/modals.html
+++ b/web/appraisal/templates/appraisal/modals.html
@@ -171,17 +171,12 @@
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Añadir propiedad</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Añadir {{realestate.get_propertyType_display}}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-
-        <div class="form-group">
-          <label>Tipo de propiedad</label>
-          {{forms.createRealEstate.propertyType}}
-        </div>
 
         <div class="row">
           <div class="col-6">
@@ -209,7 +204,7 @@
           <div class="col-6">
             <div class="form-group">
               <label>Departamento</label>
-              {{forms.createRealEstate.number}}
+              {{forms.createRealEstate.addressNumber2}}
             </div>
           </div>
           <div class="col-6">
