--- a/web/main/templates/main/modals.html
+++ b/web/main/templates/main/modals.html
@@ -46,7 +46,6 @@
               </thead>
               <tbody>
 
-                  {% csrf_token %}
                 {% for user in visadores %}
                 <tr>
                   <th scope="col">
@@ -57,7 +56,7 @@
                       </label>
                     </div>
                   </th>
-                  <th scope="col">10</th>
+                  <th scope="col">{{user.first_name}}</th>
                 </tr>
                 {% endfor %}
 
