--- a/web/appraisal/templates/appraisal/realestate_logbook.html
+++ b/web/appraisal/templates/appraisal/realestate_logbook.html
@@ -121,7 +121,7 @@
             <label for="commentConflict">Incidencia (detener el tiempo)</label>
           </div>
           <div class="form-group">
-              <button class="btn btn-outline-dark" name="comment">Comentar</button>
+              <button class="btn btn-outline-dark" name="btn_comment">Comentar</button>
           </div>
         </div>
       {% endif %}
