--- a/web/user/templates/user/profile.html
+++ b/web/user/templates/user/profile.html
@@ -22,9 +22,10 @@
 
 {% block content %}
 
-<div class="container">
-    <div class="row">
-        <div class="col-4">
+    <div class="row mb-4">
+        <div class="col">
+        </div>
+        <div class="col-3">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">{{ userprofile.first_name }} {{ userprofile.last_name }}</h5>
@@ -42,7 +43,9 @@
                 </div>
             </div>
         </div>
-
+        <div class="col">
+        </div>
+        <!--
         <div class="col-8">
             <div class="card">
                 <div class="card-body">
@@ -50,20 +53,11 @@
                 </div>
             </div>
         </div>
+        -->
 
     </div>
-</div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-                <div class="card-body">
-                    {% include "main/appraisals.html" %}
-                </div>
-        </div>
-
-    </div>
-</div>
+{% include "main/appraisals.html" %}
 
 {% endblock %}
 
