--- a/web/appraisal/templates/appraisal/realestate_general.html
+++ b/web/appraisal/templates/appraisal/realestate_general.html
@@ -46,32 +46,48 @@
     </div>
   </div>
 
-  <div class="row mt-4">
+  <hr/>
+
+  <div class="row">
     <div class="col-2">
       <p class="font-weight-bold text-right">Tasación</p>
     </div>
-    <div class="col-3">
+    <div class="col-2">
       <div class="form-group">
         <label>Tipo</label>
         {{forms.appraisal.tipoTasacion}}
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-2">
       <div class="form-group">
-        <label>Objetivo</label>
-        {{forms.appraisal.objetivo}}
+        <label>Finalidad</label>
+        {{forms.appraisal.finalidad}}
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="form-group">
+        <label>Visita</label>
+        {{forms.appraisal.visita}}
       </div>
     </div>
   </div>
 
-  <div class="row mt-4">
+  <hr/>
+
+  <div class="row">
     <div class="col-2">
       <p class="font-weight-bold text-right">Solicitante</p>
     </div>
-    <div class="col-4">
+    <div class="col-2">
       <div class="form-group">
-        <label>Nombre</label>
+        <label>Institución</label>
         {{forms.appraisal.solicitante}}
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="form-group">
+        <label>Sucursal</label>
+        {{forms.appraisal.solicitanteSucursal}}
       </div>
     </div>
     <div class="col-2">
@@ -82,24 +98,35 @@
     </div>
   </div>
 
+  <hr/>
+
   <div class="row">
     <div class="col-2">
+      <p class="font-weight-bold text-right">Ejecutivo</p>
     </div>
     <div class="col-4">
       <div class="form-group">
-        <label>Ejecutivo</label>
+        <label>Nombre</label>
         {{forms.appraisal.solicitanteEjecutivo}}
       </div>
     </div>
     <div class="col-2">
       <div class="form-group">
-        <label>Sucursal</label>
-        {{forms.appraisal.solicitanteSucursal}}
+        <label>Email</label>
+        {{forms.appraisal.solicitanteEjecutivoEmail}}
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="form-group">
+        <label>Telefono</label>
+        {{forms.appraisal.solicitanteEjecutivoTelefono}}
       </div>
     </div>
   </div>
 
-  <div class="row mt-4">
+  <hr/>
+
+  <div class="row">
     <div class="col-2">
       <p class="font-weight-bold text-right">Cliente</p>
     </div>
@@ -116,8 +143,62 @@
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-2">
+    </div>
+    <div class="col-4">
+      <div class="form-group">
+        <label>Email</label>
+        {{forms.appraisal.clienteEmail}}
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="form-group">
+        <label>Telefono</label>
+        {{forms.appraisal.clienteTelefono}}
+      </div>
+    </div>
+  </div>
 
-  <div class="row mt-4">
+  <hr/>
+
+  <div class="row mt">
+    <div class="col-2">
+      <p class="font-weight-bold text-right">Contacto</p>
+    </div>
+    <div class="col-4">
+      <div class="form-group">
+        <label>Nombre</label>
+        {{forms.appraisal.propietario}}
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="form-group">
+        <label>Rut</label>
+        {{forms.appraisal.propietarioRut}}
+      </div>
+    </div>
+  </div>
+  <div class="row mt">
+    <div class="col-2">
+    </div>
+    <div class="col-4">
+      <div class="form-group">
+        <label>Email</label>
+        {{forms.appraisal.propietarioEmail}}
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="form-group">
+        <label>Telefono</label>
+        {{forms.appraisal.propietarioTelefono}}
+      </div>
+    </div>
+  </div>
+
+  <hr/>
+
+  <div class="row mt">
     <div class="col-2">
       <p class="font-weight-bold text-right">Propietario</p>
     </div>
@@ -134,6 +215,22 @@
       </div>
     </div>
   </div>
+  <div class="row mt">
+    <div class="col-2">
+    </div>
+    <div class="col-4">
+      <div class="form-group">
+        <label>Email</label>
+        {{forms.appraisal.propietarioEmail}}
+      </div>
+    </div>
+    <div class="col-2">
+      <div class="form-group">
+        <label>Telefono</label>
+        {{forms.appraisal.propietarioTelefono}}
+      </div>
+    </div>
+  </div>
   <div class="row text-right">
     <div class="col-2">
     </div>
@@ -144,52 +241,6 @@
       </div>
     </div>
   </div>
-
-  {% for form in forms.rol %}
-  {% if forloop.counter == 1%}
-  <div class="row rol_row mt-4">
-  {% else %}
-  <div class="row rol_row">
-  {% endif %}
-    <input type="hidden" name="r-id" id="rol_id" value="{{form.instance.id}}">
-    <input type="hidden" name="r-delete" id="rol_delete" value="0">
-    <div class="col-2 text-right" id="id_title">
-      {% if forloop.counter == 1%}
-      <label class="font-weight-bold text-right">Roles</label><br>
-      <button type="button" class="btn btn-secondary add_rol" id="id_btn">
-        Agregar
-      </button>
-      {% endif %}
-    </div>
-    <div class="col-3">
-      <div class="form-group" id="id_codigo">
-        {% if forloop.counter == 1%}
-        <label>Código</label>
-        {% endif %}
-        {{form.code}}
-      </div>
-    </div>
-    <div class="col-2">
-      <div class="form-group" id="id_estado">
-        {% if forloop.counter == 1%}
-        <label>Estado</label>
-        {% endif %}
-        {{form.state}}
-      </div>
-    </div>
-    <div class="col-1">
-      {% if forloop.counter == 1%}
-      <button type="button" class="btn btn-secondary remove_rol" style="display:none;">
-        Borrar
-      </button>
-      {% else %}
-      <button type="button" class="btn btn-secondary remove_rol">
-        Borrar
-      </button>
-      {% endif %}
-    </div>
-  </div>
-  {% endfor %}
 
 </div>
 </div>
