--- a/web/main/templates/main/modals.html
+++ b/web/main/templates/main/modals.html
@@ -175,6 +175,30 @@
               </tr>
               <tr>
                 <td>
+                   {{evaluationForm.correctSurface.label}}
+                </td>
+                <td id="correctSurface">
+                  {{evaluationForm.correctSurface}}
+                </td>
+              </tr>
+              <tr>
+                <td>
+                   {{evaluationForm.completeNormative.label}}
+                </td>
+                <td id="completeNormative">
+                  {{evaluationForm.completeNormative}}
+                </td>
+              </tr>
+              <tr>
+                <td>
+                   {{evaluationForm.homologatedReference.label}}
+                </td>
+                <td id="homologatedReference">
+                  {{evaluationForm.homologatedReference}}
+                </td>
+              </tr>
+              <tr>
+                <td>
                    {{evaluationForm.commentText.label}}
                 </td>
                 <td id="commentText">
